# goph420_w2025_lab01_stAK

./: README.md  pyproject.toml
examples/: driver_probability.py  driver_seismic.py
src/goph420_lab01/: integration.py
tests/: test_gauss_legendre.py  test_newton_cotes.py
