[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goph420_lab01"
version = "0.0.1"
authors = [
{ name="Avneet Kaur", email="avneet.kaur3@ucalgary.ca" },
]
description="The first lab assignment for GOPH 699.52 based on numerical integration techniques such as the Trapezoidal Rule, Simpson's Rule and Gauss Quadrature."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy",
"matplotlib",
]
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
"License :: OSI Approved :: GNU General Public License v3",
]
[project.urls]
"Homepage" = "https://github.com/avneet-kaur3/goph420-w2025-lab01-stAK"